<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="swap_languages">Swap Languages</string>
    <string name="translate_text_hint">Enter a text to translate</string>
    <string name="translate">Translate</string>
    <string name="copy">Copy</string>
    <string name="speak_text">Speak the text</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="history">History</string>
    <string name="error_service_unavailable">Oops, an error happened. Please try again later.</string>
    <string name="client_error">Oops, an error happened. Please contact the support.</string>
    <string name="server_error">An error happened. Please try again later.</string>
    <string name="unknown_error">Oops, an unknown error happened.</string>
    <string name="record_audio">Record audio</string>
    <string name="error_speech_recognition_unavailable">Speech recognition is not available</string>
    <string name="stop_recording">Stop recording</string>
    <string name="apply">Apply</string>
    <string name="record_again">Record again</string>
    <string name="listening">Listening…</string>
    <string name="start_talking">Click record and start talking</string>
</resources>